<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.login.LoginActivity">

        <TextView
                android:id="@+id/signInLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="124dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please login using your credentials"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInLabel" />

        <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

        <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableEnd="@drawable/ic_fingerprint_black_24dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
                android:id="@+id/encrypted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:textColor="@color/black"
                android:text="@string/encrypted"
                />

        <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/action_register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/login"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/fingerprint_bottom_sheet"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
