<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fingerprint_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
            android:id="@+id/textBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:gravity="center|start"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <ImageView
            android:id="@+id/fingerprintIcon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_fingerprint_black_24dp"
            app:layout_constraintBottom_toTopOf="@id/fingerprintLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/fingerprintLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_fingerprint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fingerprintIcon"
            android:layout_marginTop="12dp"
             />

    <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/cancel"
            android:textColor="@color/fingerprint_success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>