<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
            android:id="@+id/logoImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_sentiment_satisfied_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/textBody"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/textBody"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:gravity="center|start"
            android:textSize="15sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/finish_update"
            android:textColor="@android:color/black"
            android:fontFamily="@font/open_sans_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/logoImage"/>

    <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/restart"
            app:layout_constraintTop_toBottomOf="@+id/textBody"/>

    <Button
            android:id="@+id/postpone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            android:text="@string/postpone"
            app:layout_constraintEnd_toStartOf="@+id/restart" app:layout_constraintBottom_toBottomOf="@+id/restart"
            app:layout_constraintTop_toTopOf="@+id/restart"/>


</androidx.constraintlayout.widget.ConstraintLayout>